--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 </video>
             <div class="video-overlay">
                 <div class="video-text">
-                    <h2>Knoking on the stone door</h2>
+                    <h2>Knocking on the stone door</h2>
                     <p>Behind the Shanghai´s Shikumen</p>
                 </div>
             </div>
