--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casa Shikumen - Arquitectura Tradicional China</title>
+    <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Behind the Shanghaai´s Shikumen</title>
+        <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- Google Fonts - Roboto con todos los pesos necesarios -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+     <link href="style.css" rel="stylesheet" />
     <style>
         * {
             margin: 0;
@@ -88,7 +93,7 @@
         
         h1 {
             color: #8c3c2d;
-            font-size: 3.2rem;
+            font-size: 3.6rem;
             margin-bottom: 25px;
             /* Cambiado a Roboto 900 (Black) */
             font-weight: 900;
@@ -438,22 +443,18 @@
 </head>
 <body>
     <!-- Video Hero Section -->
-    <section class="video-hero">
-        <div class="video-container">
-            <video class="hero-video" autoplay muted loop playsinline>
-    <source src="black-door-anim.mp4" type="video/mp4">
-    Tu navegador no soporta videos HTML5.
-</video>
-            <div class="video-overlay">
-                <div class="video-text">
-                    <h2>Knocking on the stone door</h2>
-                    <p>Behind the Shanghai´s Shikumen</p>
-                </div>
-            </div>
-        </div>
-    </section>
+   <nav class="w-100 bg-primary fixed-top p-0 shadow-sm">
+            <h6 class="text-center text-white p-1 m-0">China Daily Graphics</h6>
+        </nav>
+        <header>
+                <img src="facade-top-m.png" alt="Histórico Shikumen en Shanghái" class="d-md-none w-100">
+            <img src="facade-top.png" alt="Histórico Shikumen en Shanghái" class="d-none d-md-block w-100">
+        </header>
     
     <!-- Título e Introducción -->
+    <section class="title-intro">
+        <h1>Knocking on the stone door</h1>
+        <p class="intro">
     <section class="title-intro">
         <p class="intro">
             The Shikumen architectural style emerged in Shanghai during the foreign concessions period in the mid-19th century, as a creative response to the need for dense yet culturally appropriate housing. Its name, which literally translates to "stone gate," refers to the most distinctive element of these buildings: the carved stone frames that surround the main entrances.
