--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     
     <!-- Imagen a todo ancho con Tooltips -->
     <section class="image-section full-width-image-section">
-         <video autoplay loop width="100%" poster="anim-compound-prev.jpg" muted>
+         <video autoplay loop width="100%" poster="main-shikumen-clean.jpg" muted>
             <source src="shikumen-live-sound.mp4" type="video/mp4">
         </video>
         
