--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <!-- Imagen a todo ancho con Tooltips -->
     <section class="image-section full-width-image-section">
          <video autoplay loop width="100%" poster="main-shikumen-clean.jpg" muted>
-            <source src="shikumen-live-sound.mp4" type="video/mp4">
+            <source src="shikumen-live-ok.mp4" type="video/mp4">
         </video>
         
         <!-- Marcadores con tooltips -->
