spanish-english sound button

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <!-- Indicador de audio activo -->
         <div id="audioIndicator" class="audio-indicator">
             <span class="pulse"></span>
-            Audio ambiental activo
+            Ambient audio active
         </div>
 
         <img src="main-shikumen-clean.jpg" alt="The shikumen inside" class="d-md-none w-100">
